--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
 inflection==0.5.1
 packaging==24.2
+pillow==11.1.0
 PyJWT==2.9.0
 pytz==2025.2
 PyYAML==6.0.2
